Retain behavior of marking users with SDK created device keys as anonymous.
When the application does not provide an user key, the SDK generates one. Since a user key was not provided, the user is assumed to be anonymous. This was the 2.x behavior, but was unintentionally changed when migrating to use the java-sdk-common library shared with the Java server-side SDK.